auth/oauth-proxy/oauth-proxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth-proxy
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: 512k
  namespace: auth
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: oauth-proxy
            port:
              number: 4180
        path: /oauth2
        pathType: Prefix
